# DepthFusion

./: CMakeLists.txt  Main.cpp  Main.h  README.md
Shaders/: compute_gradient.comp  compute_gradient.comp.cy2079  compute_gradient_classical.comp  compute_gradient_classical_depth.comp  compute_vertices.comp  pre_compute.comp  reduce_10_10.comp  reduce_16_16.comp  reduce_2_2.comp  reduce_4_3.comp  reduce_5_5.comp  reduce_8_8.comp  transmit_z.frag  transmit_z.geom  transmit_z.vert  update_mesh.vert  update_quad.geom  update_render.frag
Tools/: Camera.cpp  Camera.h  GLSLMesh.cpp  GLSLMesh.h  GLSLMultiResMesh.cpp  GLSLMultiResMesh.h  GLSLProgram.cpp  GLSLProgram.h  InterfaceOpenNI.h  InterfaceOpenNi.cpp  SO3.cpp  SO3.h  Structures.h  Variables.h  engine.cpp  engine.h  matrix.h
